--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,11 @@
-/vendor/
-node_modules/
-npm-debug.log
-yarn-error.log
+/.phpunit.cache
 
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
-
-# Laravel 5 & Lumen specific
-public/storage
-public/hot
-
-# Laravel 5 & Lumen specific with changed public path
-public_html/storage
-public_html/hot
-
-storage/*.key
-.env
-Homestead.yaml
-Homestead.json
-/.vagrant
-.phpunit.result.cache
-
-/public/build
+/storage/*.key
 /storage/pail
-.env.backup
-.env.production
-.phpactor.json
-auth.json
+/vendor
+
+.env
+.phpunit.result.cache
+/auth.json
+/.idea
+/.vscode
