--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,18 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "larastan/larastan": "^3.0",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
-        "phpunit/phpunit": "^11.5.3"
+        "pestphp/pest": "^3.7",
+        "pestphp/pest-plugin-drift": "^3.0",
+        "pestphp/pest-plugin-type-coverage": "^3.3",
+        "phpstan/extension-installer": "^1.4",
+        "phpstan/phpstan": "^2.1",
+        "phpstan/phpstan-phpunit": "^2.0"
     },
     "autoload": {
         "psr-4": {
@@ -54,6 +60,33 @@
         "dev": [
             "Composer\\Config::disableProcessTimeout",
             "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=server,queue,logs,vite"
+        ],
+        "pint": [
+            "vendor/bin/pint"
+        ],
+        "pint-test": [
+            "vendor/bin/pint --test"
+        ],
+        "phpstan": [
+            "vendor/bin/phpstan analyse --memory-limit=2G"
+        ],
+        "test": [
+            "vendor/bin/pest --parallel"
+        ],
+        "test-coverage": [
+            "vendor/bin/pest --parallel --coverage-html reports/coverage"
+        ],
+        "type-coverage": [
+            "vendor/bin/pest --type-coverage --min=100"
+        ],
+        "type-coverage-report": [
+            "vendor/bin/pest --type-coverage-json=reports/type-coverage.json"
+        ],
+        "test-mutate": [
+            "vendor/bin/pest --mutate --parallel --min=75"
+        ],
+        "test-all": [
+            "composer test && composer type-coverage && composer test-mutate"
         ]
     },
     "extra": {
@@ -67,7 +100,8 @@
         "sort-packages": true,
         "allow-plugins": {
             "pestphp/pest-plugin": true,
-            "php-http/discovery": true
+            "php-http/discovery": true,
+            "phpstan/extension-installer": true
         }
     },
     "minimum-stability": "stable",
