Setup CI part 2 - Run tests + mutation

--- a/composer.json
+++ b/composer.json
@@ -76,6 +76,9 @@
         "test-coverage": [
             "vendor/bin/pest --parallel --coverage-html reports/coverage"
         ],
+        "test-coverage-ci": [
+            "vendor/bin/pest --parallel --coverage-cobertura=coverage.cobertura.xml --coverage-xml=build/coverage/coverage-xml --log-junit=build/coverage/junit.xml"
+        ],
         "type-coverage": [
             "vendor/bin/pest --type-coverage --min=100"
         ],
