--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches: [ main ]
   pull_request:
+    branches: [ main ]
 
 env:
   APP_ENV: "local"
@@ -11,7 +12,7 @@ env:
   APP_KEY: "base64:JiHZRqgo/WHAfi/2a6nYLVr2cDHJy8MCxczOGAs4dKE="
   APP_NAME: "Laravel API Template"
   LOG_CHANNEL: "stack"
-  DB_PASSWORD: "root"
+  DB_PASSWORD: "password"
 
 jobs:
   code-quality:
@@ -52,3 +53,78 @@ jobs:
 
       - name: Run Pest Type Coverage
         run: composer type-coverage
+  test:
+    name: Run tests (PHP 8.4)
+    permissions:
+      pull-requests: write
+      contents: read
+    runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:17.4-alpine
+        ports:
+          - "5432"
+        env:
+          POSTGRES_DB: laravel_template
+          POSTGRES_USER: admin
+          POSTGRES_PASSWORD: password
+          POSTGRES_HOST_AUTH_METHOD: md5
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: "8.4"
+          extensions: pdo, pdo_pgsql, pcntl, intl, zip, bcmath
+
+      - name: Get Composer Cache Directory
+        id: composer-cache
+        run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
+
+      - uses: actions/cache@v4
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
+
+      - name: Validate composer
+        run: composer validate
+
+      - name: Install dependencies
+        run: composer install --prefer-dist --no-progress --no-interaction --optimize-autoloader
+
+      - name: Prepare Database
+        run: php artisan migrate --seed
+
+      - name: Cache config for bootstrapping
+        run: php artisan config:cache
+
+      - name: Run test suite
+        run: composer test-coverage-ci
+
+      - name: Run mutation tests
+        run: composer test-mutate
+
+      - name: Code Coverage Summary Report
+        uses: irongut/CodeCoverageSummary@v1.3.0
+        with:
+          filename: ./**/coverage.cobertura.xml
+          badge: true
+          format: markdown
+          output: both
+
+      - name: Add Code Coverage PR Comment
+        uses: marocchino/sticky-pull-request-comment@v2
+        if: github.event_name == 'pull_request'
+        with:
+          recreate: true
+          path: code-coverage-results.md
+          header: 'Code Coverage Summary'
+
+      - name: Archive code coverage results
+        uses: actions/upload-artifact@v4
+        with:
+          name: code-coverage-report
+          path: code-coverage-results.md
