--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,7 +39,7 @@ services:
     bcmath
 
 code-quality:
-  stage: test
+  stage: code-quality
   before_script:
     - *php-setup
     - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
