--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,9 @@
         "phpstan/phpstan": "^2.1",
         "phpstan/phpstan-phpunit": "^2.0"
     },
+    "replace": {
+        "symfony/polyfill-php83": "*"
+    },
     "autoload": {
         "psr-4": {
             "App\\": "app/",
